# PySIMBA

./: .Plot.py.kate-swp  .gitignore  Babar Hadronic tag.pkl  Babar Inclusive Spectra.pkl  Grab.py  Meas.py  Plot.py  README.md  Results.py  Tools.py  babar_hadtag.pkl  babar_sem.pkl  belle.pkl  cn_pars_sem.csv  fit_results.ipynb  fit_results_two_exp.ipynb  fitter.py  get_meas.py  minuit_tutorial.ipynb  pyproject.toml  results.csv  settings.yml  table.csv  test.py  test.root  todo
.ipynb_checkpoints/: fit_results-checkpoint.ipynb
data/: babar_hadtag.pkl  babar_incl.pkl  babar_sem.pkl  belle.pkl  exp_data.pkl
fit/: collected_fits.pkl
histogram/: hist_nom.pkl
result/: result.txt
src/: Grab.py  Meas.py  Results.py  Tools.py  fit_results.ipynb  fitter.py  result.py  settings.yml
src/py_simba/: __init__.py  fitter.py  result.py
src/py_simba/data/: test_old.pkl
src/py_simba/data/exp/: exp_data.pkl
src/py_simba/data/result/: result.txt
src/py_simba/data/theory/: theory_dictionary_SSF27.pkl
src/pysimba/: Grab.py  Meas.py  Tools.py  __init__.py  __main__.py  fitter.py  grab.py  grabber.py  main.py  result.py  theory.py  tool.py
src/pysimba.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pysimba/data/: settings.yml  test_new.pkl  test_old.pkl  test_old_save.pkl
src/pysimba/data/theory/: hist_nom.pkl  theory_dictionary_expx4.pkl  theory_dictionary_gaussx3.pkl
theory/: Fmn_moments.pkl  babar_hadtag_NNLLNNLO_la03.txt  babar_hadtag_NNLLNNLO_la07.txt  theory_dictionary_SSF27.pkl  theory_dictionary_expx3.pkl
update/: update.aux  update.fdb_latexmk  update.fls  update.out  update.tex  update.toc
useless/: cn_pars.csv  fit_results.ipynb  table.csv  table_sem.csv  todo
useless/fit/: collected_fits.pkl  fit_config.pkl  just_sem.pkl
useless/update/: update.fdb_latexmk  update.fls  update.toc
