[project]
name = "simba"
version = "0.1.0"
description = "Analysis of B Meson Inclusive Spectra"
authors = [
    {name = "interstella04",email = "s08shoff@uni-bonn.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "iminuit (>=2.31.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
