[build-system]
requires = ["uv_build>=0.7.19"]
build-backend = "uv_build"

[project]
name = "py-simba"
version = "0.1.1"
description = "Python Code for the Analysis of B Meson Inclusive Spectra"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
authors = [
    {name = "Stella Hoffmann", email = "s08shoff@uni-bonn.de"}
    ]
dependencies = [
    "iminuit>=2.31.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pyyaml>=6.0.2",
]

[project.urls]
Homepage = "https://simba.lbl.gov/"
Documentation = "https://github.com/interstella04/PySIMBA"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true